--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "scripts":{
+  "scripts": {
     "start": "node --watch index.js"
   },
   "dependencies": {
@@ -7,6 +7,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.4",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.3"
   }
 }
