--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.10.3"
+    "mysql2": "^3.10.3",
+    "pg": "^8.12.0"
   }
 }
